# ota_unpacker

./: .gitignore  Cargo.toml  build.rs
bsdiff/: TEST_MAPPING  brotli_compressor.cc  bspatch.cc  diff_encoder.cc  sink_file.h  test_utils.cc
bsdiff/include/bsdiff/: bspatch.h  patch_writer.h
fec/: encode_simple.cpp  encode_simple.h  image.cpp  image.h  klog_write_stub.cpp
fec/libbase/: Android.bp
fec/libbase/abi-dumps/arm64/source-based/: libbase.so.lsdump
fec/libbase/abi-dumps/arm_arm64/source-based/: libbase.so.lsdump
fec/libbase/include/android-base/: properties.h
fec/liblog/: logd_reader.cpp  logprint.cpp
fec/liblog/tests/: Android.bp  device_test_config.xml  liblog_benchmark.cpp  liblog_device_preparer.sh  liblog_host_test.cpp  log_wrap_test.cpp
fec/squashfs-tools/: Android.bp
puffin/src/: bit_reader.cc  brotli_util.cc  extent_stream.cc  huffer.cc  huffman_table.cc  huffman_table.h  logging.h  main.cc  memory_stream.cc  puff_reader.cc  puff_writer.cc  puffdiff.cc  puffer.cc  puffin.pb.cc  puffin.pb.h  puffin_unittest.cc  puffpatch.cc  sink_stream.cc  unittest_common.cc  unittest_common.h  utils.cc
puffin/src/include/puffin/: memory_stream.h  puffpatch.h  sink_stream.h
src/: archive.rs  bspatch.rs  cmd.rs  extents.rs  fec.rs  hashtree.rs  main.rs  operation.rs  partition.rs  payload.rs  puffpatch.rs
src/cmd/: apply.rs  extract.rs
src/proto/: update_metadata.proto
