[package]
name = "ota_unpacker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.7", features = ["cargo", "derive"] }
anyhow = "1.0.66"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
protobuf = "3.2.0"
zip = "0.6.3"
byteorder = "1.4.3"
bzip2 = "0.4"
xz2 = "0.1.7"
lzma-sys = "0.1.20"
futures = "0.3.25"
num_cpus = "1.13.1"
hex = "0.4.3"
sha2 = "0.10.7"

[build-dependencies]
protobuf-codegen = "3.2.0"
cc = "1.0"
bindgen = "0.68.1"
